--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,18 +19,21 @@
         android:gravity="center"/>
 
     <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
         android:layout_below="@id/signin"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#30ffffff"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawablePadding="20dp"
         android:hint="Username"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:layout_margin="10dp"
         android:padding="20dp"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-        android:drawablePadding="20dp"/>
+        android:textColor="@color/white"
+        android:textColorHint="@color/black" />
 
     <EditText
         android:layout_width="match_parent"
@@ -39,7 +42,7 @@
         android:layout_below="@id/username"
         android:background="#30ffffff"
         android:hint="Password"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/black"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:padding="20dp"
@@ -89,6 +92,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_margin="20dp"
+            android:id="@+id/google_btn"
             android:src="@drawable/google"/>
         <ImageView
             android:layout_width="48dp"
