--- a/app/src/main/res/layout/intro_one.xml
+++ b/app/src/main/res/layout/intro_one.xml
@@ -10,12 +10,12 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
-        
+
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@drawable/First"
-            android:layout_gravity="center"/>
+            android:layout_width="301dp"
+            android:layout_height="553dp"
+            android:layout_gravity="center"
+            android:background="@drawable/som1" />
 
     </LinearLayout>
 
