--- a/app/src/main/res/layout/intro_three.xml
+++ b/app/src/main/res/layout/intro_three.xml
@@ -12,10 +12,10 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@drawable/Third"
-            android:layout_gravity="center"/>
+            android:layout_width="286dp"
+            android:layout_height="598dp"
+            android:layout_gravity="center"
+            android:background="@drawable/gandu" />
 
     </LinearLayout>
 
