--- a/app/src/main/res/layout/intro_two.xml
+++ b/app/src/main/res/layout/intro_two.xml
@@ -12,10 +12,10 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@drawable/Second"
-            android:layout_gravity="center"/>
+            android:layout_width="288dp"
+            android:layout_height="644dp"
+            android:layout_gravity="center"
+            android:background="@drawable/som2" />
 
     </LinearLayout>
 
